@@ -1,7 +1,25 @@
 package se.sundsvall.parkingpermit.businesslogic.worker;
 
-import generated.se.sundsvall.casedata.ErrandDTO;
-import generated.se.sundsvall.casedata.StatusDTO;
+import static java.time.OffsetDateTime.now;
+import static java.time.temporal.ChronoUnit.SECONDS;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.within;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.when;
+import static se.sundsvall.parkingpermit.Constants.CAMUNDA_VARIABLE_APPLICANT_NOT_RESIDENT_OF_MUNICIPALITY;
+import static se.sundsvall.parkingpermit.Constants.CAMUNDA_VARIABLE_CASE_NUMBER;
+import static se.sundsvall.parkingpermit.Constants.CAMUNDA_VARIABLE_MUNICIPALITY_ID;
+import static se.sundsvall.parkingpermit.Constants.CAMUNDA_VARIABLE_REQUEST_ID;
+import static se.sundsvall.parkingpermit.Constants.CASEDATA_STATUS_CASE_DECIDE;
+import static se.sundsvall.parkingpermit.Constants.CASEDATA_STATUS_CASE_PROCESS;
+import static se.sundsvall.parkingpermit.Constants.CASEDATA_STATUS_DECISION_EXECUTED;
+
+import java.util.List;
+
 import org.camunda.bpm.client.spring.annotation.ExternalTaskSubscription;
 import org.camunda.bpm.client.task.ExternalTask;
 import org.camunda.bpm.client.task.ExternalTaskService;
@@ -15,34 +33,20 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.stereotype.Component;
 import org.zalando.problem.Problem;
 import org.zalando.problem.Status;
+
 import se.sundsvall.parkingpermit.businesslogic.handler.FailureHandler;
 import se.sundsvall.parkingpermit.integration.camunda.CamundaClient;
 import se.sundsvall.parkingpermit.integration.casedata.CaseDataClient;
 
-import java.util.List;
-
-import static java.time.OffsetDateTime.now;
-import static java.time.temporal.ChronoUnit.SECONDS;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.within;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.never;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoInteractions;
-import static org.mockito.Mockito.when;
-import static se.sundsvall.parkingpermit.Constants.CAMUNDA_VARIABLE_APPLICANT_NOT_RESIDENT_OF_MUNICIPALITY;
-import static se.sundsvall.parkingpermit.Constants.CAMUNDA_VARIABLE_CASE_NUMBER;
-import static se.sundsvall.parkingpermit.Constants.CAMUNDA_VARIABLE_REQUEST_ID;
-import static se.sundsvall.parkingpermit.Constants.CASEDATA_STATUS_CASE_DECIDE;
-import static se.sundsvall.parkingpermit.Constants.CASEDATA_STATUS_CASE_PROCESS;
-import static se.sundsvall.parkingpermit.Constants.CASEDATA_STATUS_DECISION_EXECUTED;
+import generated.se.sundsvall.casedata.ErrandDTO;
+import generated.se.sundsvall.casedata.StatusDTO;
 
 @ExtendWith(MockitoExtension.class)
 class UpdateErrandStatusTaskWorkerTest {
 
 	private static final String REQUEST_ID = "RequestId";
 	private static final long ERRAND_ID = 123L;
+	private static final String MUNICIPALITY_ID = "2281";
 
 	@Mock
 	private CamundaClient camundaClientMock;
@@ -79,7 +83,8 @@ class UpdateErrandStatusTaskWorkerTest {
 		// Mock
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_REQUEST_ID)).thenReturn(REQUEST_ID);
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_CASE_NUMBER)).thenReturn(ERRAND_ID);
-		when(caseDataClientMock.getErrandById(ERRAND_ID)).thenReturn(errandMock);
+		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_MUNICIPALITY_ID)).thenReturn(MUNICIPALITY_ID);
+		when(caseDataClientMock.getErrandById(MUNICIPALITY_ID, ERRAND_ID)).thenReturn(errandMock);
 		when(errandMock.getId()).thenReturn(ERRAND_ID);
 		when(errandMock.getPhase()).thenReturn("Utredning");
 
@@ -87,16 +92,18 @@ class UpdateErrandStatusTaskWorkerTest {
 		worker.execute(externalTaskMock, externalTaskServiceMock);
 
 		// Verify and assert
+		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_REQUEST_ID);
 		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_CASE_NUMBER);
-		verify(caseDataClientMock).getErrandById(ERRAND_ID);
-		verify(caseDataClientMock).putStatus(eq(ERRAND_ID), statusCaptor.capture());
+		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_MUNICIPALITY_ID);
+		verify(caseDataClientMock).getErrandById(MUNICIPALITY_ID, ERRAND_ID);
+		verify(caseDataClientMock).putStatus(eq(MUNICIPALITY_ID), eq(ERRAND_ID), statusCaptor.capture());
 		verify(externalTaskServiceMock).complete(externalTaskMock);
 		verifyNoInteractions(camundaClientMock, failureHandlerMock);
 
 		assertThat(statusCaptor.getValue().size()).isOne();
-		assertThat(statusCaptor.getValue().get(0).getDateTime()).isCloseTo(now(), within(2, SECONDS));
-		assertThat(statusCaptor.getValue().get(0).getDescription()).isEqualTo("Ärendet utreds");
-		assertThat(statusCaptor.getValue().get(0).getStatusType()).isEqualTo(CASEDATA_STATUS_CASE_PROCESS);
+		assertThat(statusCaptor.getValue().getFirst().getDateTime()).isCloseTo(now(), within(2, SECONDS));
+		assertThat(statusCaptor.getValue().getFirst().getDescription()).isEqualTo("Ärendet utreds");
+		assertThat(statusCaptor.getValue().getFirst().getStatusType()).isEqualTo(CASEDATA_STATUS_CASE_PROCESS);
 	}
 
 	@Test
@@ -104,8 +111,9 @@ class UpdateErrandStatusTaskWorkerTest {
 		// Mock
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_REQUEST_ID)).thenReturn(REQUEST_ID);
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_CASE_NUMBER)).thenReturn(ERRAND_ID);
+		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_MUNICIPALITY_ID)).thenReturn(MUNICIPALITY_ID);
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_APPLICANT_NOT_RESIDENT_OF_MUNICIPALITY)).thenReturn(false);
-		when(caseDataClientMock.getErrandById(ERRAND_ID)).thenReturn(errandMock);
+		when(caseDataClientMock.getErrandById(MUNICIPALITY_ID, ERRAND_ID)).thenReturn(errandMock);
 		when(errandMock.getId()).thenReturn(ERRAND_ID);
 		when(errandMock.getPhase()).thenReturn("Beslut");
 
@@ -113,16 +121,18 @@ class UpdateErrandStatusTaskWorkerTest {
 		worker.execute(externalTaskMock, externalTaskServiceMock);
 
 		// Verify and assert
+		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_REQUEST_ID);
 		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_CASE_NUMBER);
-		verify(caseDataClientMock).getErrandById(ERRAND_ID);
-		verify(caseDataClientMock).putStatus(eq(ERRAND_ID), statusCaptor.capture());
+		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_MUNICIPALITY_ID);
+		verify(caseDataClientMock).getErrandById(MUNICIPALITY_ID, ERRAND_ID);
+		verify(caseDataClientMock).putStatus(eq(MUNICIPALITY_ID), eq(ERRAND_ID), statusCaptor.capture());
 		verify(externalTaskServiceMock).complete(externalTaskMock);
 		verifyNoInteractions(camundaClientMock, failureHandlerMock);
 
 		assertThat(statusCaptor.getValue().size()).isOne();
-		assertThat(statusCaptor.getValue().get(0).getDateTime()).isCloseTo(now(), within(2, SECONDS));
-		assertThat(statusCaptor.getValue().get(0).getDescription()).isEqualTo("Ärendet beslutas");
-		assertThat(statusCaptor.getValue().get(0).getStatusType()).isEqualTo(CASEDATA_STATUS_CASE_DECIDE);
+		assertThat(statusCaptor.getValue().getFirst().getDateTime()).isCloseTo(now(), within(2, SECONDS));
+		assertThat(statusCaptor.getValue().getFirst().getDescription()).isEqualTo("Ärendet beslutas");
+		assertThat(statusCaptor.getValue().getFirst().getStatusType()).isEqualTo(CASEDATA_STATUS_CASE_DECIDE);
 	}
 
 	@Test
@@ -130,8 +140,9 @@ class UpdateErrandStatusTaskWorkerTest {
 		// Mock
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_REQUEST_ID)).thenReturn(REQUEST_ID);
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_CASE_NUMBER)).thenReturn(ERRAND_ID);
+		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_MUNICIPALITY_ID)).thenReturn(MUNICIPALITY_ID);
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_APPLICANT_NOT_RESIDENT_OF_MUNICIPALITY)).thenReturn(true);
-		when(caseDataClientMock.getErrandById(ERRAND_ID)).thenReturn(errandMock);
+		when(caseDataClientMock.getErrandById(MUNICIPALITY_ID, ERRAND_ID)).thenReturn(errandMock);
 		when(errandMock.getId()).thenReturn(ERRAND_ID);
 		when(errandMock.getPhase()).thenReturn("Beslut");
 
@@ -139,16 +150,18 @@ class UpdateErrandStatusTaskWorkerTest {
 		worker.execute(externalTaskMock, externalTaskServiceMock);
 
 		// Verify and assert
+		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_REQUEST_ID);
 		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_CASE_NUMBER);
-		verify(caseDataClientMock).getErrandById(ERRAND_ID);
-		verify(caseDataClientMock).putStatus(eq(ERRAND_ID), statusCaptor.capture());
+		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_MUNICIPALITY_ID);
+		verify(caseDataClientMock).getErrandById(MUNICIPALITY_ID, ERRAND_ID);
+		verify(caseDataClientMock).putStatus(eq(MUNICIPALITY_ID), eq(ERRAND_ID), statusCaptor.capture());
 		verify(externalTaskServiceMock).complete(externalTaskMock);
 		verifyNoInteractions(camundaClientMock, failureHandlerMock);
 
 		assertThat(statusCaptor.getValue().size()).isOne();
-		assertThat(statusCaptor.getValue().get(0).getDateTime()).isCloseTo(now(), within(2, SECONDS));
-		assertThat(statusCaptor.getValue().get(0).getDescription()).isEqualTo("Ärendet avvisas");
-		assertThat(statusCaptor.getValue().get(0).getStatusType()).isEqualTo(CASEDATA_STATUS_DECISION_EXECUTED);
+		assertThat(statusCaptor.getValue().getFirst().getDateTime()).isCloseTo(now(), within(2, SECONDS));
+		assertThat(statusCaptor.getValue().getFirst().getDescription()).isEqualTo("Ärendet avvisas");
+		assertThat(statusCaptor.getValue().getFirst().getStatusType()).isEqualTo(CASEDATA_STATUS_DECISION_EXECUTED);
 	}
 
 
@@ -160,16 +173,21 @@ class UpdateErrandStatusTaskWorkerTest {
 		// Mock to simulate exception upon updating errand with new status
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_REQUEST_ID)).thenReturn(REQUEST_ID);
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_CASE_NUMBER)).thenReturn(ERRAND_ID);
-		when(caseDataClientMock.getErrandById(ERRAND_ID)).thenReturn(errandMock);
+		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_MUNICIPALITY_ID)).thenReturn(MUNICIPALITY_ID);
+		when(caseDataClientMock.getErrandById(MUNICIPALITY_ID, ERRAND_ID)).thenReturn(errandMock);
 		when(externalTaskMock.getVariable(CAMUNDA_VARIABLE_APPLICANT_NOT_RESIDENT_OF_MUNICIPALITY)).thenReturn(true);
 		when(errandMock.getPhase()).thenReturn("Beslut");
 		when(errandMock.getId()).thenReturn(ERRAND_ID);
-		when(caseDataClientMock.putStatus(any(), any())).thenThrow(problem);
+		when(caseDataClientMock.putStatus(eq(MUNICIPALITY_ID), any(), any())).thenThrow(problem);
 
 		// Act
 		worker.execute(externalTaskMock, externalTaskServiceMock);
 
 		// Verify and assert
+
+		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_REQUEST_ID);
+		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_CASE_NUMBER);
+		verify(externalTaskMock).getVariable(CAMUNDA_VARIABLE_MUNICIPALITY_ID);
 		verify(externalTaskServiceMock, never()).complete(externalTaskMock);
 		verify(failureHandlerMock).handleException(externalTaskServiceMock, externalTaskMock, problem.getMessage());
 		verify(externalTaskMock).getId();
